<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@color/blue"
        tools:context=".MainActivity">

    <ImageView
            android:id="@+id/check"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/check"
            android:visibility="invisible"
    />

    <ImageView
            android:id="@+id/error"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/error"
            android:visibility="invisible"
    />

    <TextView
            android:id="@+id/textview1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text1"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/violet"
            android:enabled="true"
    />

    <EditText
            android:id="@+id/name"
            android:hint="@string/add_text"
            android:textColorHint="#8F8F8F"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="24dp"
            android:inputType="text"
            android:drawableStart="@drawable/user"
            android:drawablePadding="12dp"
    />

    <EditText
            android:id="@+id/lastname"
            android:hint="@string/add_text1"
            android:textColorHint="#8F8F8F"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="24dp"
            android:inputType="text"
            android:drawableStart="@drawable/user"
            android:drawablePadding="12dp"
    />

    <EditText
            android:id="@+id/phone"
            android:hint="@string/add_text2"
            android:textColorHint="#8F8F8F"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="24dp"
            android:inputType="phone"
            android:drawableStart="@drawable/phone"
            android:drawablePadding="12dp"
    />

    <EditText
            android:id="@+id/email"
            android:hint="@string/add_text3"
            android:textColorHint="#8F8F8F"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="24dp"
            android:inputType="textEmailAddress"
            android:drawableStart="@drawable/email"
            android:drawablePadding="12dp"
    />

    <Button
            android:id="@+id/btnAccept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:text="@string/accept"
            android:textSize="12sp"
            android:textColor="@color/grey"
            android:layout_marginTop="48dp"
            android:enabled="true"
            android:visibility="visible"
            />

</LinearLayout>